--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version : "3.3"
 services :
   web :
-     image : pverma22/my-notes-app:latest
+     image : dockerpractise123/my-notes-app:latest
      ports :
          - "8000:8000"
